# spam-detection

./: .gitignore  pyproject.toml
spam/: spam_detection.ipynb  spam_detection_solution.ipynb
src/api/: __init__.py  config.py  log.py  main.py  schema.py
src/spam_detection/: config.py  inference.py  log.py  train_model.py  utils.py
src/spam_detection/data_processing/: __init__.py  feature.py  pipeline.py
tests/: test_api.py  test_inference.py
