[project]
name = "spam-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "Andry Anthony",email = "mister.anthony44@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "fastapi (>=0.129.0,<0.130.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [
    {include = "spam_detection", from = "src"},
    {include = "api", from = "src"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
